--- a/index.html
+++ b/index.html
@@ -1,1 +1,53 @@
-test
+<!doctype html>
+<html class="no-js" lang="">
+
+<head>
+  <meta charset="utf-8">
+  <title></title>
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="manifest" href="site.webmanifest">
+  <link rel="apple-touch-icon" href="icon.png">
+  <!-- Place favicon.ico in the root directory -->
+
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/main.css">
+
+  <meta name="theme-color" content="#fafafa">
+</head>
+
+<body>
+  <!--[if IE]>
+    <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
+  <![endif]-->
+
+  <!-- Add your site or application content here -->
+  <div id="mainsitecontent">
+    <p>
+        <a href="https://twitter.com/mikethemadkiwi" target="twitter"><img src="https://mikethemadkiwi.com/img/twitter.png" title="Madkiwi's Twitter" /></a>
+        <a href="https://facebook.com/themadkiwi" target="facebook"><img src="https://mikethemadkiwi.com/img/facebook.png" title="Madkiwi's Facebook" /></a>
+        <a href="https://www.linkedin.com/in/themadkiwi/" target="linkedin"><img src="https://mikethemadkiwi.com/img/linkedin.png" title="Madkiwi's Linkedin" /></a>
+        <a href="https://instagram.com/mikethemadkiwi" target="instagram"><img src="https://mikethemadkiwi.com/img/instagram.png" title="Madkiwi's Instagram" /></a>
+        <a href="https://github.com/mikethemadkiwi" target="github"><img src="https://mikethemadkiwi.com/img/github.png" title="Madkiwi's Github" /></a>
+        <a href="https://youtube.com/mikethemadkiwi" target="youtube"><img src="https://mikethemadkiwi.com/img/youtube.png" title="Madkiwi's Youtube" /></a>
+
+    </p>
+  </div>  
+
+
+  <script src="js/vendor/modernizr-3.8.0.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+  <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.4.1.min.js"><\/script>')</script>
+  <script src="js/plugins.js"></script>
+  <script src="js/main.js"></script>
+
+  <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
+  <script>
+    window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
+    ga('create', 'UA-XXXXX-Y', 'auto'); ga('set','transport','beacon'); ga('send', 'pageview')
+  </script>
+  <script src="https://www.google-analytics.com/analytics.js" async></script>
+</body>
+
+</html>
