new year, new website. NOM

--- a/index.html
+++ b/index.html
@@ -25,13 +25,11 @@
   <!-- Add your site or application content here -->
   <div id="mainsitecontent">
     <p>
-        <a href="https://twitter.com/mikethemadkiwi" target="twitter"><img src="https://mikethemadkiwi.com/img/twitter.png" title="Madkiwi's Twitter" /></a>
-        <a href="https://facebook.com/themadkiwi" target="facebook"><img src="https://mikethemadkiwi.com/img/facebook.png" title="Madkiwi's Facebook" /></a>
-        <a href="https://www.linkedin.com/in/themadkiwi/" target="linkedin"><img src="https://mikethemadkiwi.com/img/linkedin.png" title="Madkiwi's Linkedin" /></a>
-        <a href="https://instagram.com/mikethemadkiwi" target="instagram"><img src="https://mikethemadkiwi.com/img/instagram.png" title="Madkiwi's Instagram" /></a>
-        <a href="https://github.com/mikethemadkiwi" target="github"><img src="https://mikethemadkiwi.com/img/github.png" title="Madkiwi's Github" /></a>
-        <a href="https://youtube.com/mikethemadkiwi" target="youtube"><img src="https://mikethemadkiwi.com/img/youtube.png" title="Madkiwi's Youtube" /></a>
-
+        Mike Hildyard<br />
+        <a href="https://twitter.com/mikethemadkiwi" target="twitter">Twitter</a><br />
+        <a href="https://instagram.com/mikethemadkiwi" target="instagram">Instagram</a><br />
+        <a href="https://github.com/mikethemadkiwi" target="github">Github</a><br />
+        <a href="https://youtube.com/mikethemadkiwi" target="youtube">Youtube</a><br />
     </p>
   </div>  
 
